force-app/main/default/objects/Case_Feedback__c/Case_Feedback__c.object-meta.xml
<CustomObject>
    <label>Case Feedback</label>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>