force-app/main/default/objects/Case_Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Feedback</relationshipLabel>
    <relationshipName>Case_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>