force-app/main/default/objects/Case_Feedback__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Submitted Case Feedback</relationshipLabel>
    <relationshipName>Submitted_Case_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>