force-app/main/default/objects/Case_Feedback__c/validationRules/Rating_Must_Be_One_To_Five.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Must_Be_One_To_Five</fullName>
    <active>true</active>
    <description>Ensures feedback ratings stay in the expected 1 through 5 range.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Rating__c)),
    OR(
        Rating__c &lt; 1,
        Rating__c &gt; 5
    )
)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>